# blinkekatze-firmware

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  requirements.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig
main/assets/: blinkekatze_INR18650-35E_final_tweaked.gg.csv  bq27546_INR18650-35E.df.fs  default_wireless_key  wireless_key
main/src/: bonk.c  bonk.h  bq24295.c  bq24295.h  bq27546.c  bq27546.h  bq27546_dataflash.h  brightness.c  brightness.h  chacha20.c  chacha20.h  color.c  color.h  color_channel_offset.c  color_channel_offset.h  color_override.c  color_override.h  color_palette.c  color_palette.h  color_palette_wled.c  color_palette_wled.h  color_palette_wled.inc  debounce.c  debounce.h  default_color.c  default_color.h  embedded_files.h  fast_hsv2rgb.h  fast_hsv2rgb_32bit.c  fp32.c  fp32.h  fp32_vec.c  fp32_vec.h  futil.c  futil.h  gpio.c  gpio.h  httpd.c  httpd.h  i2c_bus.c  (+71 more)
tools/: displaycal_to_bin.py  flash_stream_to_c.py
